AUTOMAKE_OPTIONS = foreign no-dependencies
#CFLAGS=-c
#INCLUDES = -I./../../include/
AM_CFLAGS=-c -I$(top_srcdir)/include

#lib_LIBRARIES=libIPDR.a
lib_LTLIBRARIES = libIPDR.la

#libIPDR_a_SOURCES = descriptor.c  FNFData.c  FNFType.c  getFile.c  IPDRDocReader.c  IPDRDocWriter.c  IPDRHeader.c  schema.c  
libIPDR_la_SOURCES = descriptor.c  FNFData.c  FNFType.c  getFile.c  IPDRDocReader.c  IPDRDocWriter.c  IPDRHeader.c  schema.c

CLEANFILES = *~ *.log
