AUTOMAKE_OPTIONS = foreign no-dependencies
#CFLAGS=-c
#INCLUDES = -I./../../include/
AM_CFLAGS=-c -I$(top_srcdir)/include

#lib_LIBRARIES=libUTILS.a
lib_LTLIBRARIES = libUTILS.la

#libUTILS_a_SOURCES = dynamicArray.c  hashtable.c  IPDRMemory.c  md5.c  serialize.c  utils.c  UUIDUtil.c  errorHandler.c  schemaUtil.c  sysdep.c  uuid.c 
libUTILS_la_SOURCES = dynamicArray.c  hashtable.c  IPDRMemory.c  md5.c  serialize.c  utils.c  UUIDUtil.c  errorHandler.c  schemaUtil.c  sysdep.c  uuid.c

CLEANFILES = *~ *.log

