AUTOMAKE_OPTIONS = foreign no-dependencies
AM_CFLAGS=-c -I$(top_srcdir)/include
#INCLUDES = -I./../../include/

#lib_LIBRARIES=libXDR.a
lib_LTLIBRARIES = libXDR.la

#libXDR_a_SOURCES = AttributeDescriptorHelper.c  IPDRXDRDocEndHelper.c  RecordDescriptorHelper.c FNFDataHelper.c  IPDRXDRHeaderHelper.c  XDRMarshaller.c IPDRRecord.c IPDRXDRRecordHelper.c  XDRUnMarshaller.c IPDRStreamElementHelper.c   NameSpaceInfoHelper.c
libXDR_la_SOURCES = AttributeDescriptorHelper.c  IPDRXDRDocEndHelper.c  RecordDescriptorHelper.c FNFDataHelper.c  IPDRXDRHeaderHelper.c  XDRMarshaller.c IPDRRecord.c IPDRXDRRecordHelper.c  XDRUnMarshaller.c IPDRStreamElementHelper.c   NameSpaceInfoHelper.c

CLEANFILES = *~ *.log
