AUTOMAKE_OPTIONS = foreign no-dependencies
AM_CFLAGS=-c -I$(top_srcdir)/include
#INCLUDES = -I./../../include/

#lib_LIBRARIES=libXML.a
lib_LTLIBRARIES = libXML.la

#libXML_a_SOURCES = IPDRXMLDocEndHelper.c  IPDRXMLRecordHelper.c  XMLUnMarshaller.c IPDRXMLHeaderHelper.c  XMLMarshaller.c
libXML_la_SOURCES = IPDRXMLDocEndHelper.c  IPDRXMLRecordHelper.c  XMLUnMarshaller.c IPDRXMLHeaderHelper.c  XMLMarshaller.c

CLEANFILES = *~ *.log
